# oddsnends

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  VERSION  environment.yaml  environment.yml  environment_build.yml  environment_dev.yaml  meta.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
conda_build/: 0001-fixed-bug-assertfile-exists-handling-None-paths.patch  0001-patch-for-ioa.patch  oddsnends-0.2.2-py_0.tar.bz2
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
oddsnends/: __init__.py  cli.py  collections.py  collectionstools.py  intervals.py  ioa.py  main.py  math.py  misc.py  pdtools.py
tests/: __init__.py  test_oddsnends.py
