[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "oddsnends"

version = "0.1.1dev4"

authors = [
  { name="Vivian Leung", email="leung.vivian.w@gmail.com" },
]

description = "Miscellaneous (odds 'n ends) methods for data science"

readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas>=2.1",
  "regex",
]

keywords = ["oddsnends"]

[project.urls]
"Homepage" = "https://github.com/vivianleung/pyvcftools"
"Bug Tracker" = "https://github.com/vivianleung/pyvcftools/issues"

