[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt"
]

build-backend = "hatchling.build"

[project]
name = "oddsnends"
dynamic = ["dependencies", "optional-dependencies", "version"]

description = "Miscellaneous (odds 'n ends) methods for data science"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.10"

authors = [
  { name="Vivian Leung", email="leung.vivian.w@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["oddsnends"]

[tool.hatch.metadata]
build = 0


[tool.hatch.version]
path = "VERSION"

[tool.hatch.build.targets.sdist]
include = [
    "/oddsnends",
]
"Homepage" = "https://github.com/vivianleung/oddsnends"
"Bug Tracker" = "https://github.com/vivianleung/oddsnends/issues"

# [tool.hatch.envs.oddsnends]
# type = "conda"
# command = "conda"
# conda-forge = true
# environment-file = "environment.yml"

[tool.hatch.envs.build]
type = "conda"
command = "conda"
conda-forge = true
environment-file = "environment_build.yml"

[tool.hatch.build.conda]
channels = ["vivianleung"]
directory = "conda_build"
environment = "build"


# patches = [
#     # "/conda_build/0001-patch_for_ioa.patch"
# ]

[tool.pytest]
addopts = ["--doctest-modules"]
doctest_optionflags= ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://github.com/vivianleung/pypi"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements_dev.txt"]


[tool.pyright]

reportShadowedImports = false

